# license-mole

./: .flake8  .gitignore  .mole.scan_cache.json  .mypy.ini  .ruff.toml  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  mole.toml  pyproject.toml  requirements.txt
docs/: Makefile  NOTICE.md  index.md  license_mole.cache.md  license_mole.config.md  license_mole.config_format.md  license_mole.configfile.md  license_mole.errors.md  license_mole.licenses.collection.md  license_mole.licenses.md  license_mole.licenses.parse.md  license_mole.licenses.resources.md  license_mole.markdown.md  license_mole.md  license_mole.pathselector.md  license_mole.render.context.md  license_mole.render.labels.md  license_mole.render.md  license_mole.render.package.md  license_mole.render.versiongroup.md  license_mole.repo.md  license_mole.scan.golang.md  license_mole.scan.manual.md  license_mole.scan.md  license_mole.scan.npm.md  license_mole.scan.package.md  license_mole.scan.python.md  license_mole.scan.rust.md  modules.md
docs/source/: NOTICE.md.template  NOTICE.template  conf.py  index.rst  modules.rst
hooks/: commit-msg  run-hook
src/license_mole/: __init__.py  __main__.py  cache.py  config.py  config_format.py  configfile.py  errors.py  markdown.py  pathselector.py  repo.py
src/license_mole/licenses/: __init__.py  collection.py  parse.py
src/license_mole/render/: __init__.py  context.py  labels.py  package.py  versiongroup.py
src/license_mole/scan/: __init__.py  golang.py  manual.py  npm.py  package.py  pathselector.py  python.py  rust.py
(+2 files in other folders)
